# NeuroAlign-preprocessing

./: .debug  .env  .gitignore  README.md  pyproject.toml
docs/: crash-recovery.md  data-loss-recovery.md  sqlite-fixes.md
notebooks/: 01_test_data_loading copy.ipynb  01_test_data_loading.ipynb  debug_anatomical_loader.ipynb  debug_diffusion_loader.ipynb  debug_questionnaire_loader.ipynb
scripts/: cat12_tiv_template.m
setup/: EXECUTIVE_SUMMARY.md  MIGRATION_GUIDE.md  OUTPUT_SCHEMA.md  README_NEUROALIGN.md  REPO_STRUCTURE.md  migrate_to_preprocessing.py  preprocessed_dataset_adapter.py
src/neuroalign_preprocessing/io/: writer.py
src/neuroalign_preprocessing/loaders/: __init__.py  anatomical.py  anatomical_example.py  diffusion.py  questionnaire.py
src/neuroalign_preprocessing/preprocessing/: __init__.py  cli.py  config.py  export_cache.py  feature_store.py  pipeline.py  transformers.py
